tests/negative/m34_nonvoid_return_empty.c
int f(void) { return; }
int main(void) { return f(); }
